fdo#85889 handle pc, pca and mac rtf keywords in writerfilter

(cherry picked from commit 7839633fb356285652ed96f4bf3f85bcd5b561a4)

Conflicts:
	sw/qa/extras/rtfimport/rtfimport.cxx

Change-Id: Ic54f2233a37562bdc516e440af0b4b7973f56342
Reviewed-on: https://gerrit.libreoffice.org/13106
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>